force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Account_2__c.field-meta.xml
<CustomField>
    <fullName>Account_2__c</fullName>
    <description>Tick box to check if Account field is empty</description>
    <formula>IF(ISBLANK(  dsfs__Company__c ),FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account 2</label>
    <type>Checkbox</type>
</CustomField>