force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Invoice_Finance_Deal2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal2__c</fullName>
    <formula>IF (ISBLANK( Invoice_Finance_Deal__c ), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Finance Deal</label>
    <type>Checkbox</type>
</CustomField>