force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Invoice_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Finance Deal</label>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>