force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <formula>IF(ISBLANK(  dsfs__Lead__c ),FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>if lead is not empty</inlineHelpText>
    <label>Lead</label>
    <type>Checkbox</type>
</CustomField>