force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/SUPPLIER_BUYER_MAP2__c.field-meta.xml
<CustomField>
    <fullName>SUPPLIER_BUYER_MAP2__c</fullName>
    <formula>IF(ISBLANK( Supplier_Buyer_Map__c ),FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUPPLIER BUYER MAP</label>
    <type>Checkbox</type>
</CustomField>