force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/dsfs__All1.listView-meta.xml
<ListView>
    <fullName>dsfs__All1</fullName>
    <columns>NAME</columns>
    <columns>dsfs__Subject__c</columns>
    <columns>dsfs__Envelope_Status__c</columns>
    <columns>dsfs__Sent_Date_Time__c</columns>
    <columns>dsfs__Company__c</columns>
    <columns>dsfs__Sender__c</columns>
    <columns>Invoice_Finance_Deal2__c</columns>
    <columns>Supplier_Buyer_Map__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>