force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/Sales_Team_Z2_DocuSign_Status.listView-meta.xml
<ListView>
    <fullName>Sales_Team_Z2_DocuSign_Status</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Team Z2</label>
    <queue>Sales_Team_Z2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>